--- a/src/views/MiembrosViews.form
+++ b/src/views/MiembrosViews.form
@@ -224,6 +224,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Activar/Desactivar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="radioActivarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
